--- a/report.html
+++ b/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,27691],[],[[4,0,1,0,[],[1,299,27390],[]]],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[1,0,33100],[],[[4,0,1,0,[],[1,381,32716],[]]],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TC 03","*C:\\Users\\aniru\\PycharmProjects\\RobotFramework_Python\\Testcases\\TC_03.robot","*Testcases/TC_03.robot","*InputTextBoxTest"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TC 03","*C:\\Users\\aniru\\PycharmProjects\\RobotFramework_Python\\TestCases\\TC_03.robot","*TestCases/TC_03.robot","*InputTextBoxTest"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:27","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:27","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:28","fail":0,"id":"s1","label":"TC 03","name":"TC 03","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:33","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:33","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:33","fail":0,"id":"s1","label":"TC 03","name":"TC 03","pass":1}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1606391804933;
+window.output["baseMillis"] = 1606416267837;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 27710;
+window.output["generated"] = 33121;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
