"automation tc for sulaba IT team Isha till requesing department flow"

--- a/report.html
+++ b/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,51083],[],[[4,0,1,0,[],[1,326,50755],[]]],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[0,0,63292],[],[[4,0,1,0,[],[0,746,62543,5],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TC 03","*C:\\Users\\aniru\\PycharmProjects\\RobotFramework_Python\\TestCases\\TC_03.robot","*TestCases/TC_03.robot","*InputTextBoxTest"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TC Sulaba","*C:\\Users\\aniru\\PycharmProjects\\RobotFramework_Python\\TestCases\\TC_Sulaba.robot","*TestCases/TC_Sulaba.robot","*SulabaIshaTest","*JavascriptException: Message: javascript error: Failed to execute 'elementsFromPoint' on 'Document': The provided double value is non-finite.\n  (Session info: chrome=88.0.4324.104)\n"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:51","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:51","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:51","fail":0,"id":"s1","label":"TC 03","name":"TC 03","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:01:03","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:01:03","fail":1,"label":"All Tests","pass":0}],[],[{"elapsed":"00:01:03","fail":1,"id":"s1","label":"TC Sulaba","name":"TC Sulaba","pass":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1606447251794;
+window.output["baseMillis"] = 1612262899491;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 51610;
+window.output["generated"] = 63310;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
