--- a/report.html
+++ b/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,88845],[],[[4,0,1,0,[],[0,370,88474,5],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,154031],[],[[4,0,1,0,[],[0,343,153685,5],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TC Sulaba","*C:\\Users\\aniru\\PycharmProjects\\RobotFramework_Python\\TestCases\\TC_Sulaba.robot","*TestCases/TC_Sulaba.robot","*SulabaIshaTest","*Element with locator 'xpath:/html/body/div[17]' not found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*TC Sulaba","*C:\\Users\\aniru\\PycharmProjects\\RobotFramework_Python\\TestCases\\TC_Sulaba.robot","*TestCases/TC_Sulaba.robot","*SulabaIshaTest","*Element with locator 'xpath:/html/body/ul[2]/li[2]/a' not found."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:28","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:01:28","fail":1,"label":"All Tests","pass":0}],[],[{"elapsed":"00:01:29","fail":1,"id":"s1","label":"TC Sulaba","name":"TC Sulaba","pass":0}]];
+window.output["stats"] = [[{"elapsed":"00:02:34","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:02:34","fail":1,"label":"All Tests","pass":0}],[],[{"elapsed":"00:02:34","fail":1,"id":"s1","label":"TC Sulaba","name":"TC Sulaba","pass":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1612379698147;
+window.output["baseMillis"] = 1612440715434;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 88873;
+window.output["generated"] = 154048;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
